@@ -1,6 +1,12 @@
 ebus Daemon (ebusd) - ChangeLog
 ===============================
 
+2013-11-19:
+* Data type of struct commands.s_type changed from integer to char[2]. Possible
+  data types are: BR, MM, MS. (BroadCast, MasterMaster, MasterSlave)
+* Wolf configuration files converted to new version.
+* README fixed.
+
 2013-11-06:
 * Specific vaillant data type "ulg" (unsigned long) added.
 
